Improve condition parsing and validation in condition-task node to handle string input and ensure valid conditions are provided

--- a/condition-task.html
+++ b/condition-task.html
@@ -33,7 +33,7 @@
             console.log("This is saved data", parsedData);
             this.conditions = JSON.parse(parsedData);
             console.log("This is parsed data", this.conditions);
-
+            parsed = false;
         }
 
         console.log("Conditions after type check:", this.conditions);
